<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/textViewTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimens24"
            android:text="@string/titulo"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <TextView
            android:id="@+id/txt1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimens16"
            android:layout_marginTop="@dimen/dimens16"
            android:layout_marginEnd="@dimen/dimens16"
            android:justificationMode="inter_word"
            android:text="@string/txt1"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewTitulo" />

        <TextView
            android:id="@+id/txt2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimens16"
            android:layout_marginTop="@dimen/dimens16"
            android:layout_marginEnd="@dimen/dimens16"
            android:justificationMode="inter_word"
            android:text="@string/txt2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/textViewTitulo" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="txt1,txt2"
            tools:layout_editor_absoluteY="731dp" />

        <Button
            android:id="@+id/btnEsquerda"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimens16"
            android:layout_marginTop="@dimen/dimens24"
            android:layout_marginEnd="@dimen/dimens8"
            android:text="@string/btnEsquerda"
            app:layout_constraintEnd_toStartOf="@+id/btnEmpate"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/barrier" />

        <Button
            android:id="@+id/btnEmpate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="@dimen/dimens8"
            android:text="@string/btnEmpate"
            app:layout_constraintEnd_toStartOf="@+id/btnDireita"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnEsquerda"
            app:layout_constraintTop_toTopOf="@+id/barrier" />

        <Button
            android:id="@+id/btnDireita"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="@dimen/dimens16"
            android:text="@string/btnDireita"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnEmpate"
            app:layout_constraintTop_toTopOf="@+id/barrier"
            tools:ignore="VisualLintButtonSize" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>









